# ORION

./: .gitignore  GPU-TOWER-SETUP.md  LAUNCH_ORION.bat  ORION-PLAN-AND-STRUCTURE.md  ORION-SUMMARY.md  Orion future setup.md  Orion main summary  README.md  Summary of Orion main 1.txt  create-shortcut.vbs  main.js  package-lock.json  package.json  preload.js  test-conversations.js  test-db.js  test-electron.js  test-electron2.js  test-electron3.js  test-electron4.js  test-electron5.js  test-full.js  test-memory.js  test-schema.js
.claude/: settings.json
.openclaude/: settings.local.json
ARCHIVE/: http-bridge.js
CONFIG/: constraints.md.txt  modes.json  voice-profiles.json
CORE/: agent-registry.js.ported  agent.js.ported  ai-brain.js.ported  argument-engine.js.ported  brain-router.js.ported  business-agent.js.ported  coder-agent.js.ported  context-manager.js.ported  goal-tracker.js.ported  http-bridge.js  memory-engine.js.ported  ollama.js.ported  personality-engine.js.ported  scheduler-agent.js.ported  suggestion-engine.js.ported  systems_rules.md.txt  user-profile.js.ported
DOCS/: claude-code-advanced-setup.md
LOGS/: daily_log.md.txt
MEMORY/: long_term_memory.md.txt  orion.db
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  main.rs
src-tauri/src/core/: agent.rs  agent_registry.rs  ai_brain.rs  argument_engine.rs  brain_router.rs  constants.rs  context_manager.rs  goal_tracker.rs  mod.rs  native_http.rs  ollama_brain.rs  personality_engine.rs  suggestion_engine.rs  user_profile.rs
(+21 files in other folders)
